--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -2425,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "577e4061-0e99-4a54-8acb-5acc4167537d",
    "metadata": {},
    "outputs": [
@@ -2434,22 +2434,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Enhetskonvertering og beregninger\n",
+      "--- Hovedmeny ---\n",
       "1. Konverter en verdi med prefiks\n",
       "2. Konverter tid\n",
-      "3. Avslutt\n",
       "4. Fart og sammensatte enheter\n",
       "5. Tetthet og medisinens styrke\n",
       "6. Fysiske formler og enhetsberegninger\n",
-      "q: Avslutt programmet\n"
+      "3 eller q: Avslutt programmet\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Velg et alternativ:  4\n",
-      "Velg et alternativ (1-6):  1\n"
+      "Velg et alternativ:  1\n"
      ]
     },
     {
@@ -2464,24 +2462,23 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Skriv verdi med enhet (f.eks. '1.5 km'):  1.4 km\n",
-      "Til enhet (f.eks. m, cm, liter):  m\n"
+      "Skriv verdi med enhet (f.eks. '1.5 km'):  23 km\n",
+      "Til enhet (f.eks. m, cm, liter):  cm\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1400.0 m = 1400.000000 m\n",
+      "Resultat: 23 km = 2.3e+06 cm\n",
       "\n",
-      "Enhetskonvertering og beregninger\n",
+      "--- Hovedmeny ---\n",
       "1. Konverter en verdi med prefiks\n",
       "2. Konverter tid\n",
-      "3. Avslutt\n",
       "4. Fart og sammensatte enheter\n",
       "5. Tetthet og medisinens styrke\n",
       "6. Fysiske formler og enhetsberegninger\n",
-      "q: Avslutt programmet\n"
+      "3 eller q: Avslutt programmet\n"
      ]
     },
     {
@@ -2495,13 +2492,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Program avsluttes.\n"
+      "Avslutter programmet.\n"
      ]
     }
    ],
    "source": [
-    "# 3 Formler og geometri: Delkapittel 3.3 Enheter. Ordbok for prefikser og deres verdier. \n",
+    "# Delkapittel 3.3 Enheter. Ordbok for prefikser og deres verdier.\n",
     "# Ordbok for prefikser med symbol, verdi og navn\n",
+    "\n",
     "import re\n",
     "\n",
     "prefixes = {\n",
@@ -2580,10 +2578,10 @@
     "    if not match:\n",
     "        raise ValueError(f\"Ugyldig format: {input_str}\")\n",
     "    value = float(match.group(1))\n",
-    "    prefix = match.group(2)\n",
+    "    prefix_sym = match.group(2)\n",
     "    unit = match.group(3)\n",
     "\n",
-    "    prefix_factor = prefixes.get(prefix, {'value': 1})['value']\n",
+    "    prefix_factor = prefixes.get(prefix_sym, {'value': 1})['value']\n",
     "\n",
     "    # Her må vi finne hva slags type enhet det er for korrekt konvertering:\n",
     "    if unit in length_units:\n",
@@ -2638,7 +2636,7 @@
     "            val, unit = parse_value_unit(input(prompt))\n",
     "            return val, unit\n",
     "        except Exception as e:\n",
-    "            print(\"Feil:\", e, \"- prøv igjen. (F.eks. 1.5 km, 200 mg)\")\n",
+    "            print(f\"Feil: {e} - prøv igjen. (F.eks. 1.5 km, 200 mg)\")\n",
     "\n",
     "# Del 4 funksjoner for fart, utslipp og konvertering\n",
     "\n",
@@ -2707,78 +2705,79 @@
     "    valg = input(\"Velg et alternativ (1-2): \")\n",
     "\n",
     "    if valg == '1':\n",
-    "        print(\"Oppgi to av tre variabler (strekning, tid, fart). Bruk enheter. (F.eks. '10 km', '30 min')\")\n",
-    "        s_val, s_unit = input_value_with_unit(\"Strekning: \")\n",
-    "        t_val, t_unit = input_value_with_unit(\"Tid: \")\n",
-    "        v_val, v_unit = input_value_with_unit(\"Fart: \")\n",
-    "        # Finn hvilken som er None (bruk verdi 0 eller -1 som tomt)\n",
-    "        # Vi krever at bruker skriver \"0 enhet\" eller \"0\" hvis ukjent\n",
-    "        inputs = {'s': s_val if s_val > 0 else None,\n",
-    "                  't': t_val if t_val > 0 else None,\n",
-    "                  'v': v_val if v_val > 0 else None}\n",
-    "\n",
+    "        print(\"Oppgi to av tre variabler (strekning, tid, fart). Skriv '0' for den ukjente. Bruk enheter. (F.eks. '10 km', '30 min')\")\n",
     "        try:\n",
-    "            if inputs['v'] is None:\n",
-    "                v = regn_ut_fart(s=inputs['s'], t=inputs['t'], v=None)\n",
-    "                # Konverter fart til ønsket enhet (la bruker velge)\n",
-    "                v_out, v_unit_out = convert_to_unit(v, 'm/s')\n",
-    "                print(f\"Fart: {v:.3f} m/s\")\n",
-    "            elif inputs['s'] is None:\n",
-    "                s = regn_ut_fart(s=None, t=inputs['t'], v=inputs['v'])\n",
-    "                print(f\"Strekning: {s:.3f} m\")\n",
-    "            elif inputs['t'] is None:\n",
-    "                t = regn_ut_fart(s=inputs['s'], t=None, v=inputs['v'])\n",
-    "                print(f\"Tid: {t:.3f} sekunder\")\n",
+    "            s_input = input(\"Strekning: \")\n",
+    "            t_input = input(\"Tid: \")\n",
+    "            v_input = input(\"Fart: \")\n",
+    "\n",
+    "            s_val = None if s_input == '0' else parse_value_unit(s_input)[0]\n",
+    "            t_val = None if t_input == '0' else parse_value_unit(t_input)[0]\n",
+    "            v_val = None if v_input == '0' else parse_value_unit(v_input)[0]\n",
+    "            \n",
+    "            if v_val is None:\n",
+    "                v = regn_ut_fart(s=s_val, t=t_val, v=None)\n",
+    "                print(f\"Fart: {v:.3f} m/s  (eller {convert_to_unit(v, 'km/h')[0]:.2f} km/h)\")\n",
+    "            elif s_val is None:\n",
+    "                s = regn_ut_fart(s=None, t=t_val, v=v_val)\n",
+    "                print(f\"Strekning: {s:.3f} m (eller {convert_to_unit(s, 'km')[0]:.2f} km)\")\n",
+    "            elif t_val is None:\n",
+    "                t = regn_ut_fart(s=s_val, t=None, v=v_val)\n",
+    "                print(f\"Tid: {t:.2f} sekunder (eller {convert_to_unit(t, 'min')[0]:.2f} minutter)\")\n",
     "            else:\n",
-    "                print(\"Skriv 0 for ukjent variabel.\")\n",
+    "                print(\"Du må oppgi nøyaktig én ukjent variabel ved å skrive '0'.\")\n",
     "        except Exception as e:\n",
     "            print(\"Feil:\", e)\n",
     "\n",
     "    elif valg == '2':\n",
-    "        print(\"Oppgi to av tre variabler (masse, volum, tetthet). Bruk enheter.\")\n",
-    "        m_val, m_unit = input_value_with_unit(\"Masse: \")\n",
-    "        v_val, v_unit = input_value_with_unit(\"Volum: \")\n",
-    "        d_val, d_unit = input_value_with_unit(\"Tetthet: \")\n",
-    "        inputs = {'m': m_val if m_val > 0 else None,\n",
-    "                  'v': v_val if v_val > 0 else None,\n",
-    "                  'd': d_val if d_val > 0 else None}\n",
-    "\n",
+    "        print(\"Oppgi to av tre variabler (masse, volum, tetthet). Skriv '0' for den ukjente. Bruk enheter.\")\n",
     "        try:\n",
-    "            if inputs['d'] is None:\n",
-    "                d = regn_ut_tetthet(m=inputs['m'], v=inputs['v'], d=None)\n",
+    "            m_input = input(\"Masse: \")\n",
+    "            v_input = input(\"Volum: \")\n",
+    "            d_input = input(\"Tetthet (kg/m³): \")\n",
+    "\n",
+    "            m_val = None if m_input == '0' else parse_value_unit(m_input)[0]\n",
+    "            v_val = None if v_input == '0' else parse_value_unit(v_input)[0]\n",
+    "            d_val = None if d_input == '0' else parse_value_unit(d_input)[0]\n",
+    "\n",
+    "            if d_val is None:\n",
+    "                d = regn_ut_tetthet(m=m_val, v=v_val, d=None)\n",
     "                print(f\"Tetthet: {d:.3f} kg/m³\")\n",
-    "            elif inputs['m'] is None:\n",
-    "                m = regn_ut_tetthet(m=None, v=inputs['v'], d=inputs['d'])\n",
+    "            elif m_val is None:\n",
+    "                m = regn_ut_tetthet(m=None, v=v_val, d=d_val)\n",
     "                print(f\"Masse: {m:.3f} kg\")\n",
-    "            elif inputs['v'] is None:\n",
-    "                v = regn_ut_tetthet(m=inputs['m'], v=None, d=inputs['d'])\n",
-    "                print(f\"Volum: {v:.6f} m³\")\n",
+    "            elif v_val is None:\n",
+    "                v = regn_ut_tetthet(m=m_val, v=None, d=d_val)\n",
+    "                print(f\"Volum: {v:.6f} m³ (eller {convert_to_unit(v, 'liter')[0]:.2f} liter)\")\n",
     "            else:\n",
-    "                print(\"Skriv 0 for ukjent variabel.\")\n",
+    "                print(\"Du må oppgi nøyaktig én ukjent variabel ved å skrive '0'.\")\n",
     "        except Exception as e:\n",
     "            print(\"Feil:\", e)\n",
     "    else:\n",
     "        print(\"Ugyldig valg.\")\n",
     "\n",
+    "\n",
     "# Menyer del 1-5\n",
     "\n",
     "def del_1_meny():\n",
     "    print(\"\\nDel 1: Konverter en verdi med prefiks\")\n",
-    "    val, unit = input_value_with_unit(\"Skriv verdi med enhet (f.eks. '1.5 km'): \")\n",
-    "    target_unit = input(\"Til enhet (f.eks. m, cm, liter): \").strip()\n",
     "    try:\n",
-    "        result, res_unit = convert_to_unit(val, target_unit)\n",
-    "        print(f\"{val} {unit} = {result:.6f} {res_unit}\")\n",
+    "        val_str = input(\"Skriv verdi med enhet (f.eks. '1.5 km'): \")\n",
+    "        val_si, unit_si = parse_value_unit(val_str)\n",
+    "        target_unit = input(\"Til enhet (f.eks. m, cm, liter): \").strip()\n",
+    "        result, res_unit = convert_to_unit(val_si, target_unit)\n",
+    "        print(f\"Resultat: {val_str} = {result:g} {res_unit}\")\n",
     "    except Exception as e:\n",
     "        print(\"Feil:\", e)\n",
     "\n",
     "def del_2_meny():\n",
     "    print(\"\\nDel 2: Konverter tid\")\n",
-    "    val, unit = input_value_with_unit(\"Skriv tid med enhet (f.eks. '2 h'): \")\n",
-    "    target_unit = input(\"Til tidsenhet (s, min, h, d, y): \").strip()\n",
     "    try:\n",
-    "        result, res_unit = convert_to_unit(val, target_unit)\n",
-    "        print(f\"{val} {unit} = {result:.2f} {res_unit}\")\n",
+    "        val_str = input(\"Skriv tid med enhet (f.eks. '2 h'): \")\n",
+    "        val_si, unit_si = parse_value_unit(val_str)\n",
+    "        target_unit = input(\"Til tidsenhet (s, min, h, d, y): \").strip()\n",
+    "        result, res_unit = convert_to_unit(val_si, target_unit)\n",
+    "        print(f\"Resultat: {val_str} = {result:g} {res_unit}\")\n",
     "    except Exception as e:\n",
     "        print(\"Feil:\", e)\n",
     "\n",
@@ -2790,63 +2789,65 @@
     "    print(\"4. Konverter km/h til knop\")\n",
     "\n",
     "    valg = input(\"Velg et alternativ (1-4): \")\n",
+    "    try:\n",
+    "        if valg == '1':\n",
+    "            lpm = float(input(\"Oppgi forbruk i L/mil: \").replace(',', '.'))\n",
+    "            kmpl = diesel_forbruk_km_per_liter(lpm)\n",
+    "            print(f\"Bilen kjører {kmpl:.2f} km per liter diesel.\")\n",
+    "        elif valg == '2':\n",
+    "            gram_per_km = float(input(\"Oppgi CO₂-utslipp i gram per km: \").replace(',', '.'))\n",
+    "            kmpl = float(input(\"Oppgi bilens rekkevidde i km per liter: \").replace(',', '.'))\n",
+    "            utslipp = co2_utslipp_per_liter(kmpl, gram_per_km)\n",
+    "            print(f\"Bilen slipper ut {utslipp:.2f} kg CO₂ per liter diesel.\")\n",
+    "        elif valg == '3':\n",
+    "            knop = float(input(\"Oppgi farten i knop: \").replace(',', '.'))\n",
+    "            print(f\"{knop} knop = {knop_til_kmh(knop):.2f} km/h\")\n",
+    "        elif valg == '4':\n",
+    "            kmh = float(input(\"Oppgi farten i km/h: \").replace(',', '.'))\n",
+    "            print(f\"{kmh} km/h = {kmh_til_knop(kmh):.2f} knop\")\n",
+    "        else:\n",
+    "            print(\"Ugyldig valg.\")\n",
+    "    except Exception as e:\n",
+    "        print(\"Feil: \", e)\n",
     "\n",
-    "    if valg == '1':\n",
-    "        lpm = float(input(\"Oppgi forbruk i L/mil: \"))\n",
-    "        kmpl = diesel_forbruk_km_per_liter(lpm)\n",
-    "        print(f\"Bilen kjører {kmpl:.2f} km per liter diesel.\")\n",
-    "    elif valg == '2':\n",
-    "        gram_per_km = float(input(\"Oppgi CO₂-utslipp i gram per km: \"))\n",
-    "        kmpl = float(input(\"Oppgi bilens rekkevidde i km per liter: \"))\n",
-    "        utslipp = co2_utslipp_per_liter(kmpl, gram_per_km)\n",
-    "        print(f\"Bilen slipper ut {utslipp:.2f} kg CO₂ per liter diesel.\")\n",
-    "    elif valg == '3':\n",
-    "        knop = float(input(\"Oppgi farten i knop: \"))\n",
-    "        print(f\"{knop} knop = {knop_til_kmh(knop):.2f} km/h\")\n",
-    "    elif valg == '4':\n",
-    "        kmh = float(input(\"Oppgi farten i km/h: \"))\n",
-    "        print(f\"{kmh} km/h = {kmh_til_knop(kmh):.2f} knop\")\n",
-    "    else:\n",
-    "        print(\"Ugyldig valg.\")\n",
     "\n",
     "def del_5_meny():\n",
     "    print(\"\\nDel 5: Medisinsk doseutregning\")\n",
-    "    masse, masse_enhet = input_value_with_unit(\"Oppgi kroppsmasse (f.eks. '70 kg'): \")\n",
-    "    dose_per_kg = float(input(\"Oppgi dose i mg per kg: \"))\n",
-    "    total_dose = medisinsk_dose(masse, dose_per_kg)\n",
-    "    print(f\"Total dose: {total_dose:.2f} mg\")\n",
+    "    try:\n",
+    "        masse, masse_enhet = input_value_with_unit(\"Oppgi kroppsmasse (f.eks. '70 kg'): \")\n",
+    "        dose_per_kg = float(input(\"Oppgi dose i mg per kg: \").replace(',', '.'))\n",
+    "        total_dose = medisinsk_dose(masse, dose_per_kg)\n",
+    "        print(f\"Total dose: {total_dose:.2f} mg\")\n",
+    "    except Exception as e:\n",
+    "        print(\"Feil: \", e)\n",
     "\n",
     "# Hovedmeny\n",
     "\n",
     "def main():\n",
     "    while True:\n",
-    "        print(\"\\nEnhetskonvertering og beregninger\")\n",
+    "        print(\"\\n--- Hovedmeny ---\")\n",
     "        print(\"1. Konverter en verdi med prefiks\")\n",
     "        print(\"2. Konverter tid\")\n",
-    "        print(\"3. Avslutt\")\n",
     "        print(\"4. Fart og sammensatte enheter\")\n",
     "        print(\"5. Tetthet og medisinens styrke\")\n",
     "        print(\"6. Fysiske formler og enhetsberegninger\")\n",
-    "        print(\"q: Avslutt programmet\")\n",
+    "        print(\"3 eller q: Avslutt programmet\")\n",
     "\n",
     "        valg = input(\"Velg et alternativ: \")\n",
-    "        if valg == \"q\":\n",
-    "            print(\"Program avsluttes.\")\n",
-    "            break\n",
-    "        choice = input(\"Velg et alternativ (1-6): \")\n",
-    "        if choice == '1':\n",
+    "        \n",
+    "        if valg == '1':\n",
     "            del_1_meny()\n",
-    "        elif choice == '2':\n",
+    "        elif valg == '2':\n",
     "            del_2_meny()\n",
-    "        elif choice == '3':\n",
+    "        elif valg == '4':\n",
+    "            del_4_meny()\n",
+    "        elif valg == '5':\n",
+    "            del_5_meny()\n",
+    "        elif valg == '6':\n",
+    "            del_6_meny()\n",
+    "        elif valg == '3' or valg.lower() == 'q':\n",
     "            print(\"Avslutter programmet.\")\n",
     "            break\n",
-    "        elif choice == '4':\n",
-    "            del_4_meny()\n",
-    "        elif choice == '5':\n",
-    "            del_5_meny()\n",
-    "        elif choice == '6':\n",
-    "            del_6_meny()\n",
     "        else:\n",
     "            print(\"Ugyldig valg. Prøv igjen.\")\n",
     "\n",
@@ -3276,14 +3277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "bdd49309-a5a7-4747-b2a7-1eede8126b35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e847a8684af467584e8084be1adc13c",
+       "model_id": "cdda168f63b44014a4ce4090782ef70a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3297,7 +3298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6212180b88f74705ac95c100587d38bf",
+       "model_id": "0cd16134bdc949c484bacdbe816ad47a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3311,7 +3312,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1abd2af64bae4b3e97eb2953e0638a6e",
+       "model_id": "141d922a4a3e401d982b5dabe98fd44b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3325,7 +3326,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac62d115e53748deacb1c377547d2dcc",
+       "model_id": "b66399e2bc9541219012332b8ba5a771",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3339,7 +3340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9d8f036bac048acb874f707e9c31bd6",
+       "model_id": "2229a0a298924b12a2b37802c4cde943",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3353,7 +3354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d801b06fa094749a057a0707bc690ee",
+       "model_id": "093ab0922be14985a4002adbe3befd5a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3367,7 +3368,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "802f7db06226422688e64afbd0096dcb",
+       "model_id": "d3d96bc1554e41c69a61c45cd71e1dba",
        "version_major": 2,
        "version_minor": 0
       },
