--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -2089,7 +2089,9 @@
   {
    "cell_type": "markdown",
    "id": "9115020b-c8f7-4a8e-89e2-f89408181cac",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{blue}{\\text{Kapittel 3 - Formler og geometri}}$"
    ]
