--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -2089,9 +2089,7 @@
   {
    "cell_type": "markdown",
    "id": "9115020b-c8f7-4a8e-89e2-f89408181cac",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# $\\color{blue}{\\text{Kapittel 3 - Formler og geometri}}$"
    ]
@@ -3202,79 +3200,175 @@
     }
    ],
    "source": [
-    "# 3.6 Pytagoras setning\n",
+    "# Pytagora`s setning\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Funksjon for å konvertere input med komma til flyttall\n",
-    "def convert_to_float(value):\n",
+    "# Konverteringsfaktorer til meter\n",
+    "unit_factors = {\"m\": 1.0, \"cm\": 0.01, \"mm\": 0.001}\n",
+    "\n",
+    "# --- Introduksjonsfigur ---\n",
+    "def show_intro_triangle():\n",
+    "    fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "    a_demo, b_demo = 4, 3\n",
+    "    c_demo = math.sqrt(a_demo**2 + b_demo**2)\n",
+    "\n",
+    "    # Tegn trekanten\n",
+    "    ax.plot([0, a_demo], [0, 0], 'b-', linewidth=2)\n",
+    "    ax.plot([0, 0], [0, b_demo], 'r-', linewidth=2)\n",
+    "    ax.plot([a_demo, 0], [0, b_demo], 'g-', linewidth=2)\n",
+    "\n",
+    "    # Etiketter\n",
+    "    ax.text(a_demo/2, -0.3, \"a\", fontsize=14, color='blue', ha='center')\n",
+    "    ax.text(-0.3, b_demo/2, \"b\", fontsize=14, color='red', va='center')\n",
+    "    ax.text(a_demo/2, b_demo/2 + 0.2, \"c\", fontsize=14, color='green', ha='center')  # Mellomting\n",
+    "\n",
+    "    # Rettvinkelmarkering\n",
+    "    corner = 0.3\n",
+    "    ax.plot([0, corner, corner, 0], [0, 0, corner, corner], 'k-')\n",
+    "\n",
+    "    # Oppsett\n",
+    "    lim = max(a_demo, b_demo) * 1.2\n",
+    "    ax.set_xlim(-0.5, lim)\n",
+    "    ax.set_ylim(-0.5, lim)\n",
+    "    ax.set_aspect('equal', 'box')\n",
+    "    ax.set_title(\"Pytagoras: a² + b² = c²\\n(a og b er kateter, c er hypotenusen)\")\n",
+    "    ax.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "# Vis introduksjonsfigur\n",
+    "show_intro_triangle()\n",
+    "\n",
+    "# --- Smart parser ---\n",
+    "def parse_value_with_unit(text):\n",
+    "    \"\"\"\n",
+    "    Parserer en verdi med enhet fra tekst, f.eks. '6cm', '3,3mm', '0.06m'.\n",
+    "    Returnerer verdi i meter (float) eller None hvis ugyldig.\n",
+    "    \"\"\"\n",
+    "    if not text or text.strip() == '':\n",
+    "        return None\n",
+    "\n",
+    "    text = text.strip().lower().replace(',', '.')\n",
+    "    # Finn enhet (m, cm, mm)\n",
+    "    if text.endswith('mm'):\n",
+    "        unit = 'mm'; num_str = text[:-2]\n",
+    "    elif text.endswith('cm'):\n",
+    "        unit = 'cm'; num_str = text[:-2]\n",
+    "    elif text.endswith('m'):\n",
+    "        unit = 'm'; num_str = text[:-1]\n",
+    "    else:\n",
+    "        # Hvis ingen enhet, bruk valgt enhet fra dropdown\n",
+    "        unit = unit_dropdown.value\n",
+    "        num_str = text\n",
+    "\n",
     "    try:\n",
-    "        return float(value.replace(',', '.'))\n",
+    "        value = float(num_str)\n",
     "    except ValueError:\n",
     "        return None\n",
     "\n",
-    "# Funksjon for å beregne manglende side\n",
-    "def calculate_pythagoras(a, b, c):\n",
-    "    if a is None and b is not None and c is not None:\n",
-    "        a = math.sqrt(c**2 - b**2)\n",
-    "        return f\"Den manglende siden a er {a:.2f}\", a, b, c\n",
-    "    elif b is None and a is not None and c is not None:\n",
-    "        b = math.sqrt(c**2 - a**2)\n",
-    "        return f\"Den manglende siden b er {b:.2f}\", a, b, c\n",
-    "    elif c is None and a is not None and b is not None:\n",
-    "        c = math.sqrt(a**2 + b**2)\n",
-    "        return f\"Den manglende siden c (hypotenus) er {c:.2f}\", a, b, c\n",
+    "    # Konverter til meter\n",
+    "    faktor = unit_factors[unit]\n",
+    "    return value * faktor\n",
+    "\n",
+    "# --- Beregning ---\n",
+    "def calculate_pythagoras_with_mode(modus, a_m, b_m, c_m):\n",
+    "    if modus == 'a':\n",
+    "        if b_m and c_m and c_m > b_m:\n",
+    "            a_m = math.sqrt(c_m**2 - b_m**2)\n",
+    "            return f\"Den manglende siden a er {a_m:.2f} m\", a_m, b_m, c_m\n",
+    "        else:\n",
+    "            return \"Oppgi gyldige verdier: b > 0 og c > b.\", a_m, b_m, c_m\n",
+    "    elif modus == 'b':\n",
+    "        if a_m and c_m and c_m > a_m:\n",
+    "            b_m = math.sqrt(c_m**2 - a_m**2)\n",
+    "            return f\"Den manglende siden b er {b_m:.2f} m\", a_m, b_m, c_m\n",
+    "        else:\n",
+    "            return \"Oppgi gyldige verdier: a > 0 og c > a.\", a_m, b_m, c_m\n",
     "    else:\n",
-    "        return \"Vennligst fyll inn to av tre felt for å beregne den manglende siden.\", a, b, c\n",
+    "        if a_m and b_m and a_m > 0 and b_m > 0:\n",
+    "            c_m = math.sqrt(a_m**2 + b_m**2)\n",
+    "            return f\"Den manglende siden c (hypotenus) er {c_m:.2f} m\", a_m, b_m, c_m\n",
+    "        else:\n",
+    "            return \"Oppgi gyldige verdier: a > 0 og b > 0.\", a_m, b_m, c_m\n",
     "\n",
-    "# Funksjon for å tegne trekanten\n",
-    "def draw_triangle(a, b, c):\n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.plot([0, a], [0, 0], 'b-', label=f'a = {a:.2f}')\n",
-    "    ax.plot([0, 0], [0, b], 'r-', label=f'b = {b:.2f}')\n",
-    "    ax.plot([0, a], [b, 0], 'g-', label=f'c = {c:.2f}')\n",
-    "    ax.set_xlim(0, max(a, b, c))\n",
-    "    ax.set_ylim(0, max(a, b, c))\n",
+    "def draw_triangle(a_u, b_u, c_u, unit_label=\"m\"):\n",
+    "    fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "    ax.plot([0, a_u], [0, 0], 'b-', label=f'a = {a_u:.2f} {unit_label}')\n",
+    "    ax.plot([0, 0], [0, b_u], 'r-', label=f'b = {b_u:.2f} {unit_label}')\n",
+    "    ax.plot([a_u, 0], [0, b_u], 'g-', label=f'c = {c_u:.2f} {unit_label}')\n",
+    "    corner = 0.08 * max(a_u, b_u, c_u)\n",
+    "    ax.plot([0, corner, corner, 0], [0, 0, corner, corner], 'k-')\n",
+    "    lim = max(a_u, b_u, c_u) * 1.1\n",
+    "    ax.set_xlim(0, lim); ax.set_ylim(0, lim)\n",
     "    ax.set_aspect('equal', 'box')\n",
-    "    ax.legend()\n",
-    "    plt.show()\n",
+    "    ax.set_xlabel(f\"x ({unit_label})\"); ax.set_ylabel(f\"y ({unit_label})\")\n",
+    "    ax.set_title(f\"Trekant (Pytagoras) — enhet: {unit_label}\")\n",
+    "    ax.legend(); plt.show()\n",
     "\n",
-    "# Inndatafelt med bred layout\n",
-    "a_input = widgets.Text(description=\"a (katet 1):\", layout=widgets.Layout(width='600px'))\n",
-    "b_input = widgets.Text(description=\"b (katet 2):\", layout=widgets.Layout(width='600px'))\n",
-    "c_input = widgets.Text(description=\"c (hypotenus):\", layout=widgets.Layout(width='600px'))\n",
-    "\n",
-    "# Utdatafelt\n",
+    "# --- Widgets ---\n",
+    "mode_dropdown = widgets.Dropdown(\n",
+    "    options=[(\"Beregn katet a\", \"a\"), (\"Beregn katet b\", \"b\"), (\"Beregn c (hypotenus)\", \"c\")],\n",
+    "    value=\"c\", description=\"Modus:\"\n",
+    ")\n",
+    "unit_dropdown = widgets.Dropdown(\n",
+    "    options=[(\"Meter (m)\", \"m\"), (\"Centimeter (cm)\", \"cm\"), (\"Millimeter (mm)\", \"mm\")],\n",
+    "    value=\"cm\", description=\"Enhet:\"\n",
+    ")\n",
+    "a_input = widgets.Text(description=\"a:\", layout=widgets.Layout(width='400px'))\n",
+    "b_input = widgets.Text(description=\"b:\", layout=widgets.Layout(width='400px'))\n",
+    "c_input = widgets.Text(description=\"c:\", layout=widgets.Layout(width='400px'))\n",
     "output = widgets.Output()\n",
+    "calc_button = widgets.Button(description=\"Beregn\", button_style='success')\n",
     "\n",
-    "# Kalkuleringsknapp\n",
-    "calc_button = widgets.Button(description=\"Beregn\")\n",
+    "# --- UI-oppdatering ---\n",
+    "def oppdater_ui(change=None):\n",
+    "    modus = mode_dropdown.value\n",
+    "    if modus == 'a':\n",
+    "        a_input.layout.display = 'none'\n",
+    "        b_input.layout.display = ''\n",
+    "        c_input.layout.display = ''\n",
+    "    elif modus == 'b':\n",
+    "        a_input.layout.display = ''\n",
+    "        b_input.layout.display = 'none'\n",
+    "        c_input.layout.display = ''\n",
+    "    else:\n",
+    "        a_input.layout.display = ''\n",
+    "        b_input.layout.display = ''\n",
+    "        c_input.layout.display = 'none'\n",
+    "oppdater_ui()\n",
+    "mode_dropdown.observe(oppdater_ui, names='value')\n",
     "\n",
-    "# Hva som skjer når knappen trykkes\n",
-    "def on_calc_button_clicked(b):\n",
+    "# --- Beregning ---\n",
+    "def on_calc_button_clicked(b_obj):\n",
     "    with output:\n",
     "        output.clear_output()\n",
-    "        a = convert_to_float(a_input.value)\n",
-    "        b = convert_to_float(b_input.value)\n",
-    "        c = convert_to_float(c_input.value)\n",
-    "        if a is None and a_input.value != '':\n",
-    "            print(\"Ugyldig verdi for a. Vennligst bruk tall med punktum eller komma som desimaltegn.\")\n",
-    "        elif b is None and b_input.value != '':\n",
-    "            print(\"Ugyldig verdi for b. Vennligst bruk tall med punktum eller komma som desimaltegn.\")\n",
-    "        elif c is None and c_input.value != '':\n",
-    "            print(\"Ugyldig verdi for c. Vennligst bruk tall med punktum eller komma som desimaltegn.\")\n",
+    "        modus = mode_dropdown.value\n",
+    "        unit_label = unit_dropdown.value\n",
+    "        faktor = unit_factors[unit_label]\n",
+    "\n",
+    "        a_m = parse_value_with_unit(a_input.value) if a_input.layout.display != 'none' else None\n",
+    "        b_m = parse_value_with_unit(b_input.value) if b_input.layout.display != 'none' else None\n",
+    "        c_m = parse_value_with_unit(c_input.value) if c_input.layout.display != 'none' else None\n",
+    "\n",
+    "        msg, a_m, b_m, c_m = calculate_pythagoras_with_mode(modus, a_m, b_m, c_m)\n",
+    "        print(msg)\n",
+    "\n",
+    "        if a_m and b_m and c_m:\n",
+    "            a_u = a_m / faktor; b_u = b_m / faktor; c_u = c_m / faktor\n",
+    "            print(f\"a = {a_u:.2f} {unit_label}\")\n",
+    "            print(f\"b = {b_u:.2f} {unit_label}\")\n",
+    "            print(f\"c = {c_u:.2f} {unit_label}\")\n",
+    "            draw_triangle(a_u, b_u, c_u, unit_label)\n",
     "        else:\n",
-    "            result, a, b, c = calculate_pythagoras(a, b, c)\n",
-    "            print(result)\n",
-    "            if a and b and c:\n",
-    "                draw_triangle(a, b, c)\n",
+    "            print(\"Kan ikke tegne trekanten.\")\n",
     "\n",
     "calc_button.on_click(on_calc_button_clicked)\n",
     "\n",
-    "# Vis widgetene\n",
-    "display(a_input, b_input, c_input, calc_button, output)"
+    "# --- Visning ---\n",
+    "ui = widgets.VBox([widgets.HBox([mode_dropdown, unit_dropdown]), a_input, b_input, c_input, calc_button, output])\n",
+    "display(ui)"
    ]
   },
   {
